--- a/index.html
+++ b/index.html
@@ -45,36 +45,36 @@
                 <div class="col-sm-3">
                     <h1 style="font-size: 3rem;">Lens</h1>
                     <h3>
-                        <a class="badge badge-primary" href="https://github.com/LensPlaysGames/Coding-Projects" target="_blank">Independant</a><br />
-                        <a class="badge badge-danger" href="https://lensplaysgames.itch.io/" target="_blank">Creative</a><br />
-                        <a class="badge badge-success" href="/epk.html">Artist</a>
+                        <a class="badge badge-primary shadow" href="https://github.com/LensPlaysGames/Coding-Projects" target="_blank">Independant</a><br />
+                        <a class="badge badge-danger shadow" href="https://lensplaysgames.itch.io/" target="_blank">Creative</a><br />
+                        <a class="badge badge-success shadow" href="/epk.html">Artist</a>
                     </h3>
                 </div>
                 <div class="row ml-auto">
                     <div class="col-sm-3 text-right align-self-end">
-                        <form action="/epk.html"><input class="btn btn-light" style="font-size: 1.5rem;" type="submit" value="Learn More"></form>
+                        <form action="/epk.html"><input class="btn btn-light shadow" style="font-size: 1.5rem;" type="submit" value="Learn More"></form>
                     </div>
                 </div>
             </div>
             <div class="row px-3 text-white">
                 <div class="col-sm card gradient-diag my-2 mx-1">
-                    <h2 class="p-3"><a class="badge badge-success" href="https://open.spotify.com/artist/0XZaLnVbuh6TvIWbRdGRfb?si=cR0gXFNBQCaMs_lLk8yHZw" target="_blank">Music</a></h2>
+                    <h2 class="p-3"><a class="badge badge-success shadow" href="https://open.spotify.com/artist/0XZaLnVbuh6TvIWbRdGRfb?si=cR0gXFNBQCaMs_lLk8yHZw" target="_blank">Music</a></h2>
                     <span class="card-body pt-0">I am a fully-independent artist! I publish my own tracks on <a href="https://open.spotify.com/artist/0XZaLnVbuh6TvIWbRdGRfb?si=L-tbbkBTTjWAXTLW5KQuZg" target="_blank">Spotify</a> and many more places. </span>
                     <span>Click below to go to my Spotify Artist Page!</span>
-                    <form class="text-right p-3" action="https://open.spotify.com/artist/0XZaLnVbuh6TvIWbRdGRfb?si=cR0gXFNBQCaMs_lLk8yHZw" target="_blank"><input class="btn btn-light" style="font-size: 1.5rem;" type="submit" value="Learn More" data-toggle="tooltip" title="Spotify -- Lens" /></form>
+                    <form class="text-right p-3" action="https://open.spotify.com/artist/0XZaLnVbuh6TvIWbRdGRfb?si=cR0gXFNBQCaMs_lLk8yHZw" target="_blank"><input class="btn btn-light shadow" style="font-size: 1.5rem;" type="submit" value="Learn More" data-toggle="tooltip" title="Spotify -- Lens" /></form>
                 </div>
                 <div class="col-sm card gradient-diag my-2 mx-1">
-                    <h2 class="p-3"><a class="badge badge-danger" href="https://lensplaysgames.itch.io/" target="_blank">Games</a></h2>
+                    <h2 class="p-3"><a class="badge badge-danger shadow" href="https://lensplaysgames.itch.io/" target="_blank">Games</a></h2>
                     <span class="card-body pt-0">I create games (usually playable <a href="https://lensplaysgames.itch.io/sandbox" target="_blank">in browser</a> or as <a href="https://play.google.com/store/apps/details?id=com.LensPlaysGames.PixelPilot" target="_blank">an app</a>)!<br />
                     I use Unity Game Engine, and since I'm stubborn, create (almost) every asset from scratch 😄. </span>
                     <span>Click below to check out some games I've made!</span>
-                    <form class="text-right p-3" action="https://lensplaysgames.itch.io/" target="_blank"><input class="btn btn-light" style="font-size: 1.5rem;" type="submit" value="Learn More" data-toggle="tooltip" title="Itch.io -- LensPlaysGames" /></form>
+                    <form class="text-right p-3" action="https://lensplaysgames.itch.io/" target="_blank"><input class="btn btn-light shadow" style="font-size: 1.5rem;" type="submit" value="Learn More" data-toggle="tooltip" title="Itch.io -- LensPlaysGames" /></form>
                 </div>
                 <div class="col-sm card gradient-diag my-2 mx-1">
-                    <h2 class="p-3"><a class="badge badge-primary" href="https://github.com/LensPlaysGames/Coding-Projects" target="_blank">Coding</a></h2>
+                    <h2 class="p-3"><a class="badge badge-primary shadow" href="https://github.com/LensPlaysGames/Coding-Projects" target="_blank">Coding</a></h2>
                     <span class="card-body pt-0">I enjoy programming quite a bit, as well! </span>
                     <span>Check out Some Projects I've done, <small>other than this website 😀</small>, below!</span>
-                    <form class="text-right p-3" action="https://github.com/LensPlaysGames/Coding-Projects" target="_blank"><input class="btn btn-light" style="font-size: 1.5rem;" type="submit" value="Learn More" data-toggle="tooltip" title="Github -- Coding Projects" /></form>
+                    <form class="text-right p-3" action="https://github.com/LensPlaysGames/Coding-Projects" target="_blank"><input class="btn btn-light shadow" style="font-size: 1.5rem;" type="submit" value="Learn More" data-toggle="tooltip" title="Github -- Coding Projects" /></form>
                 </div>
             </div>
         
