--- a/epk.html
+++ b/epk.html
@@ -55,7 +55,7 @@
                 <div class="col-lg m-1">
                     <div class="col-sm jumbotron jumbotron-sm gradient-diag-dark mx-auto mb-0 pb-1 pt-3">
                         <h2 class="px-2 mb-4 text-white">Links</h2>
-                        <table class="table table-dark table-striped">
+                        <table class="table table-dark table-striped shadow">
                         <thead><tr><th><h3>Platform</h3></th></tr></thead>
                         <tbody>
                             <tr><td><h4><a href="https://open.spotify.com/artist/0XZaLnVbuh6TvIWbRdGRfb?si=cR0gXFNBQCaMs_lLk8yHZw" target="_blank"><img src="img/logo-spotify-color.png" width="16" height="16"/> Spotify</a></h4></td></tr>
@@ -70,7 +70,7 @@
             <div class="row m-0">
                 <div class="col-lg jumbotron gradient-diag pt-3 text-nowrap">
                     <h2 class="p-2 mb-4 text-white">Upcoming Tracks</h2>
-                    <div class="card gradient-side-black my-2 p-2">
+                    <div class="card gradient-side-black shadow my-2 p-2">
                         <div class="card-body p-0">
                             <div class="p-2 col-sm-1 text-left text-light">
                                 <h2>FUN</h2>
@@ -79,28 +79,28 @@
                             <audio class="col-sm w-100" controls preload="auto" src="audio/FUNfullmix.mp3" typeof="audio/mpeg">Your Browser Does Not Support The Audio Tag</audio>
                         </div>
                     </div>
-                    <div class="card gradient-side-black my-2 p-2">
+                    <div class="card gradient-side-black shadow my-2 p-2">
                         <div class="p-2 col-sm-1 text-left text-light">
                             <h2>NT</h2>
                             <span class="text-light">    beat</span>
                         </div>
                         <audio class="col-sm w-100" controls preload="auto" src="audio/NT-smallmix-no-silence.mp3" typeof="audio/mpeg">Your Browser Does Not Support The Audio Tag</audio>
                     </div>
-                    <div class="card gradient-side-black my-2 p-2">
+                    <div class="card gradient-side-black shadow my-2 p-2">
                         <div class="p-2 col-sm-1 text-left text-light">
                             <h2>New Beginnings</h2>
                             <span class="text-light">    snippet</span>
                         </div>
                         <audio class="col-sm w-100" controls preload="auto" src="audio/newBEGINnings.mp3" typeof="audio/mpeg">Your Browser Does Not Support The Audio Tag</audio>
                     </div>
-                    <div class="card gradient-side-black my-2 p-2">
+                    <div class="card gradient-side-black shadow my-2 p-2">
                         <div class="p-2 col-sm-1 text-left text-light">
                             <h2>Just A Plug</h2>
                             <span class="text-light">    unreleased</span>
                         </div>
                         <audio class="col-sm w-100" controls preload="auto" src="audio/JustAPlugVocalsMix.mp3" typeof="audio/mpeg">Your Browser Does Not Support The Audio Tag</audio>
                     </div>
-                    <div class="card gradient-side-black my-2 p-2">
+                    <div class="card gradient-side-black shadow my-2 p-2">
                         <div class="p-2 col-sm-1 text-left text-light">
                             <h2>You Know</h2>
                             <span class="text-light">    unreleased</span>
@@ -113,7 +113,7 @@
                 <div class="col-lg jumbotron jumbotron-sm gradient-diag-dark mx-auto pb-1 pt-3">
                     <h2 class="p-2 mb-4 text-white">Contact</h2>
                     <h6 class="text-danger"><em>* PROFESSIONAL INQUIRIES ONLY</em></h6>
-                    <table class="table table-dark table-striped">
+                    <table class="table table-dark table-striped shadow">
                         <thead><tr><td><h3>Info</h3></td></tr></thead>
                         <tbody>
                             <tr><td><h5><a href="mailto:lensraproducer@gmail.com">📧 lensraproducer@gmail.com</a></h5></td></tr>
