--- a/epk.html
+++ b/epk.html
@@ -46,9 +46,9 @@
                     <div class="col-md jumbotron gradient-diag text-white pt-3 m-0">
                         <h2 class="p-2 mb-4"><img src="img/lens-yung.png" alt="Close up of Lens' Face as a kid" width="64" height="64"/> Bio</h2>
                         <span>
-                            I'm Lens! I spend my time making dope music, cool projects, and learning as much as fucking possible. If you down with that road and that vibe then stick around, we got a lot ahead of us :D <br />
+                            I'm Lens! I spend my time making dope music, cool projects, and learning as much as fucking possible. If you down with that road and that vibe then stick around, we got a lot ahead of us 💯 <br />
                             Anyway, <br />
-                            It ain't about how I got here, it's about how I move forward. So let's do this shit 😈
+                            It ain't about how I got here, it's about how I move forward. So let's do this 😈
                         </span>
                     </div>
                 </div>
