--- a/epk.html
+++ b/epk.html
@@ -128,6 +128,7 @@
                     <img src="img/lens-yeah.jpg" class="img-fluid pic-lg my-2" alt="Lens looks down at camera" />
                     <img src="img/lens-vibe.jpg" class="col-md img-fluid pic-md my-2" alt="Lens holds a banana as a stick, vaporwave a e s t h e t i c floating around, 'vibe check' text on image" />
                     <img src="img/lens-ooh.jpg" class="col-md img-fluid pic-md my-2" alt="Lens sitting in chair, meaninfully gazing into the existence of the implied viewer" />
+                    <img src="img/lens-high.jpg" class="img-fluid pic-lg my-2" alt="Lens sitting on top of a mountain, gazing at the beautiful valley below" />
                 </div>
             </div>
         </div>
