--- a/epk.html
+++ b/epk.html
@@ -18,22 +18,28 @@
         <meta name="canonical" content="https://lensor-radii.netlify.app/epk.html" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="/style.css" />
         <link rel="icon" href="/favicon.ico" />
     </head>
     <body class="gradient-side-dark">
         <!--NAVBAR-->
         <div class="container-fluid px-0">
             <nav class="navbar navbar-expand-md bg-dark">
-                <h1><a class="navbar-brand badge badge-secondary gradient-side text-white" href="/"><img src="favicon.png" alt="Lensor Radii Logo -- Plain Orange Circle" width="32" height="32"/> Lensor Radii</a></h1>    
+                <h1><a class="navbar-brand badge badge-secondary gradient-side text-white" href="/"><img src="/favicon.png" alt="Lensor Radii Logo -- Plain Orange Circle" width="32" height="32"/> Lensor Radii</a></h1>    
                 <button class="navbar-toggler bg-light navbar-light" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>  
-                <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                <div class="collapse navbar-collapse justify-content-between" id="collapsibleNavbar">
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <div class="btn btn-dark"><a class="nav-link text-light h4" href="/" target="_self">Home</a></div>
                             <div class="btn btn-dark"><a class="nav-link text-light h4" href="/epk.html" target="_self">Electronic Press Kit</a></div>
+                        </li>
+                    </ul>
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <div class="btn btn-dark"><a class="nav-link text-light h4" href="/about-lens.html" target="_self">About Lens</a></div>
+                            <div class="btn btn-dark"><a class="nav-link text-light h4" href="/other-projects.html" target="_self">Other Projects</a></div>
                         </li>
                     </ul>
                 </div>
@@ -43,13 +49,14 @@
         <div class="container md-auto text-center">
             <div class="row m-0 my-4">
                 <div class="col-lg m-1">
-                    <div class="col-md jumbotron gradient-diag text-white pt-3 m-0">
+                    <div class="col-md jumbotron gradient-diag text-white pt-3 pb-0 m-0">
                         <h2 class="p-2 mb-4"><img src="img/lens-yung.png" alt="Close up of Lens' Face as a kid" width="64" height="64"/> Bio</h2>
-                        <span>
+                        <div>
                             I'm Lens! I spend my time making dope music, cool projects, and learning as much as fucking possible. If you down with that road and that vibe then stick around, we got a lot ahead of us 💯 <br />
                             Anyway, <br />
-                            It ain't about how I got here, it's about how I move forward. So let's do this 😈
-                        </span>
+                            It ain't about how I got here, it's about how I move forward. So let's do this 😈<br />
+                            <div class="py-2"><a href="/about-lens.html" target="_self"><small><cite>More In-Depth About Lens</cite></small></a></div>
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg m-1">
@@ -66,11 +73,10 @@
                     </div>
                 </div>
             </div>
-
             <div class="row m-0">
                 <div class="col-lg jumbotron gradient-diag pt-3 text-nowrap">
                     <h2 class="p-2 mb-4 text-white">Upcoming Tracks</h2>
-                    <div class="card gradient-side-black shadow my-2 p-2">
+                    <div class="card gradient-diag-light-2 shadow my-2 p-2">
                         <div class="card-body p-0">
                             <div class="p-2 col-sm-1 text-left text-light">
                                 <h2>FUN</h2>
@@ -79,28 +85,28 @@
                             <audio class="col-sm w-100" controls preload="auto" src="audio/FUNfullmix.mp3" typeof="audio/mpeg">Your Browser Does Not Support The Audio Tag</audio>
                         </div>
                     </div>
-                    <div class="card gradient-side-black shadow my-2 p-2">
+                    <div class="card gradient-diag shadow my-2 p-2">
                         <div class="p-2 col-sm-1 text-left text-light">
                             <h2>NT</h2>
                             <span class="text-light">    beat</span>
                         </div>
                         <audio class="col-sm w-100" controls preload="auto" src="audio/NT-smallmix-no-silence.mp3" typeof="audio/mpeg">Your Browser Does Not Support The Audio Tag</audio>
                     </div>
-                    <div class="card gradient-side-black shadow my-2 p-2">
+                    <div class="card gradient-diag-light-2 shadow my-2 p-2">
                         <div class="p-2 col-sm-1 text-left text-light">
                             <h2>New Beginnings</h2>
                             <span class="text-light">    snippet</span>
                         </div>
                         <audio class="col-sm w-100" controls preload="auto" src="audio/newBEGINnings.mp3" typeof="audio/mpeg">Your Browser Does Not Support The Audio Tag</audio>
                     </div>
-                    <div class="card gradient-side-black shadow my-2 p-2">
+                    <div class="card gradient-diag shadow my-2 p-2">
                         <div class="p-2 col-sm-1 text-left text-light">
                             <h2>Just A Plug</h2>
                             <span class="text-light">    unreleased</span>
                         </div>
                         <audio class="col-sm w-100" controls preload="auto" src="audio/JustAPlugVocalsMix.mp3" typeof="audio/mpeg">Your Browser Does Not Support The Audio Tag</audio>
                     </div>
-                    <div class="card gradient-side-black shadow my-2 p-2">
+                    <div class="card gradient-diag-light-2 shadow my-2 p-2">
                         <div class="p-2 col-sm-1 text-left text-light">
                             <h2>You Know</h2>
                             <span class="text-light">    unreleased</span>
@@ -132,7 +138,6 @@
                 </div>
             </div>
         </div>
-
         <!--jQuery, Popper.js, Bootstrap.js-->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
