--- a/index.html
+++ b/index.html
@@ -18,22 +18,28 @@
         <link rel="canonical" href="https://lensor-radii.netlify.app" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="/style.css" />
         <link rel="icon" href="/favicon.ico" />
     </head>
     <body class="gradient-side-dark">
         <!--NAVBAR-->
         <div class="container-fluid px-0">
             <nav class="navbar navbar-expand-md bg-dark">
-                <h1><a class="navbar-brand badge badge-secondary gradient-side text-white" href="/"><img src="favicon.png" alt="Lensor Radii Logo -- Plain Orange Circle" width="32" height="32"/> Lensor Radii</a></h1>    
+                <h1><a class="navbar-brand badge badge-secondary gradient-side text-white" href="/"><img src="/favicon.png" alt="Lensor Radii Logo -- Plain Orange Circle" width="32" height="32"/> Lensor Radii</a></h1>    
                 <button class="navbar-toggler bg-light navbar-light" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>  
-                <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                <div class="collapse navbar-collapse justify-content-between" id="collapsibleNavbar">
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <div class="btn btn-dark"><a class="nav-link text-light h4" href="/" target="_self">Home</a></div>
                             <div class="btn btn-dark"><a class="nav-link text-light h4" href="/epk.html" target="_self">Electronic Press Kit</a></div>
+                        </li>
+                    </ul>
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <div class="btn btn-dark"><a class="nav-link text-light h4" href="/about-lens.html" target="_self">About Lens</a></div>
+                            <div class="btn btn-dark"><a class="nav-link text-light h4" href="/other-projects.html" target="_self">Other Projects</a></div>
                         </li>
                     </ul>
                 </div>
@@ -77,9 +83,7 @@
                     <form class="text-right p-3" action="https://github.com/LensPlaysGames/Coding-Projects" target="_blank"><input class="btn btn-light shadow" style="font-size: 1.5rem;" type="submit" value="Learn More" data-toggle="tooltip" title="Github -- Coding Projects" /></form>
                 </div>
             </div>
-        
         </div>
-
         <!--jQuery, Popper.js, Bootstrap.js-->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
