Other Projects -  Small Tweaks

--- a/epk.html
+++ b/epk.html
@@ -133,8 +133,10 @@
                     <h2 class="px-2 mb-4 text-white">Pictures</h2>
                     <img src="img/lens-yeah.jpg" class="img-fluid pic-lg my-2" alt="Lens looks down at camera" />
                     <img src="img/lens-vibe-sm.jpg" class="col-md img-fluid pic-md my-2" alt="Lens holds a banana as a stick, vaporwave a e s t h e t i c floating around, 'vibe check' text on image" />
+                    <img src="/img/lens-booth-1.jpg" class="img-fluid pic-md shadow my-2" alt="Lens looking into the camera, standing in his Homemade Vocal Booth behind the mic" /><br />
                     <img src="img/lens-ooh-sm.jpg" class="col-md img-fluid pic-md my-2" alt="Lens sitting in chair, meaninfully gazing into the existence of the implied viewer" />
                     <img src="img/lens-high-sm.jpg" class="img-fluid pic-lg my-2" alt="Lens sitting on top of a mountain, gazing at the beautiful valley below" />
+                    <img class="img-fluid pic-md shadow my-2" src="/img/lens-booth-2.jpg" alt="Lens straight CHILLING in his Homemade Vocal Booth (circa 2020)" /><br />
                 </div>
             </div>
         </div>
