--- a/other-projects.html
+++ b/other-projects.html
@@ -52,23 +52,23 @@
                 <div class="col-lg-12 my-3 mx-auto">
                     Count from 0 to 9 with the click of a button!<br />
                     <div class="col card w-nomin gradient-diag-bright text-body my-2">
-                        <div class="card-header"><img class="img-fluid pic-md-h shadow" src="/img/BCD-Counter-LEDs-sm.jpg" alt="One of Four Green LEDs lit up; the rightmost one. Shows Example of Circuit in Action" /></div>
-                        <div class="card-body p-2"><cite><small>A One in the Output LEDs</small></cite></div>
+                        <div class="card-header"><a href="/img/BCD-Counter-LEDs-sm.jpg" target="_self"><img class="img-fluid pic-md-h shadow" src="/img/BCD-Counter-LEDs-sm.jpg" alt="One of Four Green LEDs lit up; the rightmost one. Shows Example of Circuit in Action" /></a></div>
+                        <div class="card-body p-2"><cite><small>A One in the 74LS90's Output Displayed with LEDs</small></cite></div>
                     </div>
                 </div>
-                <span class="jumbotron w-100 gradient-diag-light text-left text-body py-2 my-3">Great project for learning wiring, testing a breadboard, or getting familiar with counting in binary! <br />
-                We'll be using a 7490 IC to Increment our Count, a 555 timer to debounce our button, and 4 LEDs to display our output!</span>
+                <span class="jumbotron w-100 gradient-diag-light text-left text-body py-2 my-3">A great project that helped me learn some wiring basics, test my breadboards, figure out how to use Integrated Circuits, and get familiar with counting in binary! <br />
+                I used a 74LS90 IC to Increment our Count, a 555 timer to debounce our push-button, and LEDs to display the binary output!</span>
                 <div class="col card gradient-diag-dark m-0 p-3">
                     <div class="badge badge-secondary mb-3"><h3 class="text-white">Materials</h3></div>
                     <table class="table table-dark table-striped">
                         <thead> <tr><td>Quantity</td><td>Component</td><td>Description</td></tr></thead>
                         <tbody>
                             <tr><td>1</td><td>74LS90 IC</td><td>Binary-Coded-Decimal Counter</td></tr>
-                            <tr><td>1</td><td>555 Timer</td><td>An Oscillator IC being used in monostable mode to debounce a push-button in this circuit</td></tr>
+                            <tr><td>1</td><td>555 Timer</td><td>An Oscillator IC being used in monostable mode to debounce a push-button</td></tr>
                             <tr><td>1</td><td>SPST Push-Button Switch</td><td>Used to Increment Counter</td></tr>
-                            <tr><td>5</td><td>3V LED</td><td>Lights to Display Output in Binary</td></tr>
-                            <tr><td>1</td><td>0.1μf Capacitor</td><td>Discharge Capacitor for 555 Timer/Debounce Circuit. C in t = RC</td></tr>
-                            <tr><td>1</td><td>1000000Ω Resistor</td><td>Pull-Up Resistor for 555 Timer. R in t = RC</td></tr>
+                            <tr><td>5</td><td>3V LED</td><td>Lights to Display Output</td></tr>
+                            <tr><td>1</td><td>0.1μf Capacitor</td><td>Threshold Capacitor for 555 Timer. C in t = RC</td></tr>
+                            <tr><td>1</td><td>1000000Ω Resistor</td><td>Discharge Resistor for 555 Timer. R in t = RC</td></tr>
                             <tr><td>1</td><td>1000Ω Resistor</td><td>Pull-Up Resistor for Push-Button Trigger</td></tr>
                             <tr><td>2</td><td>100Ω Resistor</td><td>Current-Limiting Resistor for LED</td></tr>
                             <tr><td>1</td><td>BB400</td><td>400 Tie-Point Solderless Plug-in Breadboard</td></tr>
@@ -82,8 +82,8 @@
                                 <div class="card-body p-2"><cite><small>Circuit Diagram</small></cite></div>
                             </div>
                             <div class="col card w-nomin gradient-diag-bright text-body m-1">
-                                <div class="card-header"><a href="/img/BCD-Counter-Overview-sm.jpg"><img class="img-fluid pic-sm-h shadow" src="/img/BCD-Counter-Overview-sm.jpg" alt="Top Down Picture of Binary Coded Decimal Counter Circuit built on Solderless Plug-In Breadboard" /></a></div>
-                                <div class="card-body p-2"><cite><small>Top-Down of Finished Circuit</small></cite></div>
+                                <div class="card-header"><a href="/img/BCD-Counter-Overview-sm.jpg"><img class="img-fluid pic-sm-h shadow" src="/img/BCD-Counter-Overview-sm.jpg" alt="Binary Coded Decimal Counter Circuit built on Solderless Plug-In Breadboard" /></a></div>
+                                <div class="card-body p-2"><cite><small>Finished Circuit</small></cite></div>
                             </div>
                         </div>
                     </div>
