--- a/about-lens.html
+++ b/about-lens.html
@@ -87,33 +87,35 @@
             <div class="card gradient-diag">
                 <div class="card-header"><h1>Quality Audio</h1></div>
                 <div class="card-body">
-                    Early into my music journey, I found that sound quality was a large factor in whether people would even consider your music as valid. Because of that, I chose to build a broke-man's vocal booth 🤣 (of which I am pictured in below)<br />
+                    Early into my music journey, I found that sound quality was a large factor in whether people would even consider your music as valid. Because of that, I chose to build a broke-man's vocal booth (of which I am pictured in below), constructed out of a mattress, two blankets, and <em>many</em> pillows.<br />
+                    Albeit, this did not gain me <em>any</em> listeners, I pressed on, knowing this improved sound was something <strong>I</strong> am <em>actually</em> happy with.<br />
                     <img class="img-fluid pic-md shadow my-2" src="/img/lens-booth-1.jpg" alt="Lens looking into the camera, standing in his Homemade Vocal Booth behind the mic" /><br />
                     <div class="card w-nomin gradient-diag-light-2">
-                        <h4 class="my-3">This has gone through many iterations, but the concept is the same in most: </h4><br />
+                        <h4 class="my-3">This booth has under-gone many iterations, but the concept stays the same: </h4><br />
                         <ul class="list-group">
                             <li class="list-group-item gradient-diag">Place a Mattress Behind Artist and In Front of the Microphone, Reducing Direct Reverberation with Flat Wall Surface <a href="https://lh3.googleusercontent.com/proxy/zS9GYDN7M9OyLk4-qZrR91-jkA9fKevFsYDea1N0fR2amosDVeldQvw5bwid5cyi2fBM08ZcMpkFG4urW5p2X_sumoYro-Wa-kPXVd8wjKx5dZeUjZRXRMI_l-A10Y_t3SBy" target="_blank" data-toggle="tooltip" title="Audio Reflections Diagram">(Early Reflections)</a></li>
                             <li class="list-group-item gradient-diag">Hang Blanket Behind and to the Sides of the Microphone, Causing Excess Reflections from Behind to Dissipate Faster <a href="https://lh3.googleusercontent.com/proxy/zS9GYDN7M9OyLk4-qZrR91-jkA9fKevFsYDea1N0fR2amosDVeldQvw5bwid5cyi2fBM08ZcMpkFG4urW5p2X_sumoYro-Wa-kPXVd8wjKx5dZeUjZRXRMI_l-A10Y_t3SBy" target="_blank" data-toggle="tooltip" title="Audio Reflections Diagram">(Late Reflections)</a></li>
                             <li class="list-group-item gradient-diag">Cover any Flat, Hard Surface Visible from Artist POV while Recording with Soft, Irregular Surfaces (Pillows on Exposed Wall Sections, Jackets Hung in Corner of Room, etc)</li>
                         </ul>
                     </div><br />
-                    I also found that the more thought you give Something, that doesn't necesarrily Translate into the 'Refined-ness' or, What Really Matters: You, Looking back and Liking it after it's Done...<br />
-                    In short, Music taught me to <br />
+                    I also found that the more thought you give something, that doesn't necesarrily translate into the finished product or, what really even matters: You.<br />
                     <br />
-                    <div class="badge badge-warning"><h3>LET THE FUCK GO</h3></div><br />
+                    <h4>In short, Music taught me to </h4><br />
+                    <div class="badge badge-warning mt-0"><h3>LET THE FUCK GO</h3></div><br />
                     <br />
                     And,<br />
                     <em>Truthfully, </em><br />
+                    <br />
                     I have.<br />
                     <br />
-                    It took <a href="https://open.spotify.com/artist/0XZaLnVbuh6TvIWbRdGRfb?si=cR0gXFNBQCaMs_lLk8yHZw" target="_blank">music</a>, Support from amazing, amazing people (Shouts-Out you, Pops!), and <small>(too much)</small> time, but I did it. <strong>I</strong> removed my slugworth-self from it's previous habitat: A <em>pill-filled, </em><strong>arrogant, </strong>ignorant, <em>shitty, </em><strong><em>shell</em></strong>-of-a-human-being that I am ashamed to have once been.<br />
+                    It took <a href="https://open.spotify.com/artist/0XZaLnVbuh6TvIWbRdGRfb?si=cR0gXFNBQCaMs_lLk8yHZw" target="_blank">music</a>, Support from amazing, amazing people (Shouts-Out you, Pops!), and <small>(too much)</small> time, but I did it. <strong>I</strong> removed my slugworth-self from it's previous habitat: A <em>pill-filled, </em><strong>arrogant, </strong>ignorant, <em>shitty, </em><strong><em>shell</em></strong>-of-a-human-being that I am ashamed to have, even once, been.<br />
                     Although, without each previous moment, I wouldn't be who I am in the current one...<br />
                     So who knows...<br />
                     <br />
-                    <em>Maybe One Day I <small>(or those around me)</small> Will Appreciate all the <strong>Shit</strong> I Went Through</em><br />
+                    <em>Maybe One Day I <small>(or those around me)</small> <strong>Will</strong> Appreciate all the <strong>Shit</strong> I Went Through</em><br />
                     <br />
-                    Until Then, <br />
-                    Cheers
+                    <em>Until Then, </em><br />
+                    Cheers.
                 </div>
             </div>
         </div>
