--- a/epk.html
+++ b/epk.html
@@ -5,11 +5,11 @@
         <meta name="url" content="https://lensor-radii.netlify.app/epk.html" />
         <title>Lensor Radii - EPK</title>
         <meta name="description" content="Lens is an Independant Creative Artist dedicated to bringing new realities into existence." />
-        <meta name="og:url" content="https://lensor-radii.netlify.app/epk.html" />
-        <meta name="og:type" content="website" />
+        <meta property="og:url" content="https://lensor-radii.netlify.app/epk.html" />
+        <meta property="og:type" content="website" />
         <meta property="og:title" content="Lensor Radii - EPK" />
         <meta name="og:description" content="Lens is an Independant Creative Artist dedicated to bringing new realities into existence." />
-        <meta name="og:image" content="https://lensor-radii.netlify.app/img/lens-yeah.jpg" />
+        <meta property="og:image" content="https://lensor-radii.netlify.app/img/lens-yeah.jpg" />
         <meta name="twitter:url" content="https://lensor-radii.netlify.app/epk.html" />
         <meta name="twitter:card" content="summary_large_image" />
         <meta property="twitter:title" content="Lensor Radii - EPK" />
