--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
         <meta name="url" content="https://lensor-radii.netlify.app" />
         <title>Lensor Radii - Home</title>
         <meta name="description" content="Lens is an Independant Creative Artist originally from Spokane, WA dedicated to bringing new realities into existence." />
-        <meta name="og:url" content="https://lensor-radii.netlify.app" />
-        <meta name="og:type" content="website" />
+        <meta property="og:url" content="https://lensor-radii.netlify.app" />
+        <meta property="og:type" content="website" />
         <meta property="og:title" content="Lensor Radii - Home" />
         <meta name="og:description" content="Lens is an Independant Creative Artist originally from Spokane, WA dedicated to bringing new realities into existence." />
-        <meta name="og:image" content="https://lensor-radii.netlify.app/img/lens-high.jpg" />
+        <meta property="og:image" content="https://lensor-radii.netlify.app/img/lens-high.jpg" />
         <meta property="twitter:url" content="https://lensor-radii.netlify.app" />
         <meta name="twitter:card" content="summary_large_image" />
         <meta property="twitter:title" content="Lensor Radii - Home" />
