--- a/other-projects.html
+++ b/other-projects.html
@@ -5,11 +5,11 @@
         <meta name="url" content="https://lensor-radii.netlify.app/other-projects.html" />
         <title>Lensor Radii - Other Projects</title>
         <meta name="description" content="A Look at Lens' Other Hobbies and Projects" />
-        <meta name="og:url" content="https://lensor-radii.netlify.app/other-projects.html" />
-        <meta name="og:type" content="website" />
+        <meta property="og:url" content="https://lensor-radii.netlify.app/other-projects.html" />
+        <meta property="og:type" content="website" />
         <meta property="og:title" content="Lensor Radii - Other Projects" />
         <meta name="og:description" content="A Look at Lens' Other Hobbies and Projects" />
-        <meta name="og:image" content="https://lensor-radii.netlify.app/img/lens-high.jpg" />
+        <meta property="og:image" content="https://lensor-radii.netlify.app/img/lens-high.jpg" />
         <meta property="twitter:url" content="https://lensor-radii.netlify.app/other-projects.html" />
         <meta name="twitter:card" content="summary_large_image" />
         <meta property="twitter:title" content="Lensor Radii - Other Projects" />
