other-projects: tr -> th in table heading

--- a/other-projects.html
+++ b/other-projects.html
@@ -61,7 +61,7 @@
                 <div class="col card gradient-diag-dark m-0 p-3">
                     <div class="badge badge-secondary mb-3"><h3 class="text-white">Materials</h3></div>
                     <table class="table table-dark table-striped">
-                        <thead> <tr><td>Quantity</td><td>Component</td><td>Description</td></tr></thead>
+                        <thead> <tr><th>Quantity</th><th>Component</th><th>Description</th></tr></thead>
                         <tbody>
                             <tr><td>1</td><td>74LS90 IC</td><td>Binary-Coded-Decimal Counter</td></tr>
                             <tr><td>1</td><td>555 Timer</td><td>An Oscillator IC being used in monostable mode to debounce a push-button</td></tr>
