min-size on extra project images

--- a/other-projects.html
+++ b/other-projects.html
@@ -124,11 +124,11 @@
                     </table>
                     <div class="col-lg-12">
                         <div class="row">
-                            <div class="col card w-nomin gradient-diag-bright text-body m-1">
+                            <div class="col-sm card w-nomin gradient-diag-bright text-body m-1">
                                 <div class="card-header"><img class="img-fluid pic-sm-h shadow" src="/img/lens-high-sm.jpg" /></div>
                                 <div class="card-body p-2"><cite><small>I'm on a rock</small></cite></div>
                             </div>
-                            <div class="col card w-nomin gradient-diag-bright text-body m-1">
+                            <div class="col-sm card w-nomin gradient-diag-bright text-body m-1">
                                 <div class="card-header"><img class="img-fluid pic-sm-h shadow" src="/img/lens-yeah.jpg" /></div>
                                 <div class="card-body p-2"><cite><small>Watch where you walk</small></cite></div>
                             </div>
